--- a/pkg/yazi/keymap.toml
+++ b/pkg/yazi/keymap.toml
@@ -2,41 +2,17 @@
 
 [mgr]
 prepend_keymap = [
-  { on = "<Right>", run = "plugin smart-enter", desc = "Enter directory or open file" },
-  { on = [
-    "c",
-    "a",
-  ], run = "plugin compress", desc = "Archive" },
-  { on = [
-    "u",
-    "a",
-  ], run = "plugin yamb save", desc = "Add bookmark" },
-  { on = [
-    "u",
-    "g",
-  ], run = "plugin yamb jump_by_key", desc = "Jump bookmark by key" },
-  { on = [
-    "u",
-    "G",
-  ], run = "plugin yamb jump_by_fzf", desc = "Jump bookmark by fzf" },
-  { on = [
-    "u",
-    "d",
-  ], run = "plugin yamb delete_by_key", desc = "Delete bookmark by key" },
-  { on = [
-    "u",
-    "D",
-  ], run = "plugin yamb delete_by_fzf", desc = "Delete bookmark by fzf" },
-  { on = [
-    "u",
-    "A",
-  ], run = "plugin yamb delete_all", desc = "Delete all bookmarks" },
-  { on = [
-    "u",
-    "r",
-  ], run = "plugin yamb rename_by_key", desc = "Rename bookmark by key" },
-  { on = [
-    "u",
-    "R",
-  ], run = "plugin yamb rename_by_fzf", desc = "Rename bookmark by fzf" },
+  { on = "q",       run = "quit --no-cwd-file",         desc = "Exit without cd" },
+  { on = "Q",       run = "quit",                       desc = "Exit and cd" },
+  { on = "?",       run = "help",                       desc = "Help" },
+  { on = "<Right>", run = "plugin smart-enter",         desc = "Enter directory or open file" },
+  { on = ["c","a"], run = "plugin compress",            desc = "Archive" },
+  { on = ["u","a"], run = "plugin yamb save",           desc = "Add bookmark" },
+  { on = ["u","g"], run = "plugin yamb jump_by_key",    desc = "Jump bookmark by key" },
+  { on = ["u","G"], run = "plugin yamb jump_by_fzf",    desc = "Jump bookmark by fzf" },
+  { on = ["u","d"], run = "plugin yamb delete_by_key",  desc = "Delete bookmark by key" },
+  { on = ["u","D"], run = "plugin yamb delete_by_fzf",  desc = "Delete bookmark by fzf" },
+  { on = ["u","A"], run = "plugin yamb delete_all",     desc = "Delete all bookmarks" },
+  { on = ["u","r"], run = "plugin yamb rename_by_key",  desc = "Rename bookmark by key" },
+  { on = ["u","R"], run = "plugin yamb rename_by_fzf",  desc = "Rename bookmark by fzf" },
 ]
