--- a/config/polybar/config.ini
+++ b/config/polybar/config.ini
@@ -55,10 +55,10 @@ padding = 0
 
 font-1 = "Iosevka Nerd Font:style=Medium:size=17;4"
 font-5 = "Iosevka Nerd Font:style=Medium:size=20;4"
-font-0 = "JetBrainsMonoNL Nerd Font:size=10;3"
-font-2 = "JetBrainsMonoNL Nerd Font:size=12;3"
-font-3 = "JetBrainsMonoNL Nerd Font:size=14;3"
-font-4 = "JetBrainsMonoNL Nerd Font:style=Bold:size=11;3"
+font-0 = "JetBrainsMono NF:size=10;3"
+font-2 = "JetBrainsMono NF:size=12;3"
+font-3 = "JetBrainsMono NF:size=14;3"
+font-4 = "JetBrainsMono NF:style=Bold:size=11;3"
 
 modules-left = powermenu l i3 r s l wireless-network r
 modules-center = l date pad github r
