--- a/config/kitty/kitty.conf
+++ b/config/kitty/kitty.conf
@@ -14,10 +14,10 @@
 #: etc. For example::
 
 
-font_family      JetBrains Mono Medium
-bold_font        JetBrains Mono Bold
-italic_font      JetBrains Mono Italic
-bold_italic_font JetBrains Mono Bold Italic
+font_family      JetBrainsMono NF Medium
+bold_font        JetBrainsMono NF Bold
+italic_font      JetBrainsMono NF Italic
+bold_italic_font JetBrainsMono NF Bold Italic
 
 font_size 10.0
 
