--- a/config/sway/config
+++ b/config/sway/config
@@ -1,7 +1,7 @@
 # reference: man 5 sway
 # https://envyj020.github.io/dotfiles/keybindings/i3
 
-set $font JetBrainsMonoNL Nerd Font
+set $font JetBrainsMono NF
 
 set $mod Mod4
 set $ctrl Control
