--- a/config/i3/config
+++ b/config/i3/config
@@ -137,6 +137,10 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
+# brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%- -n 1
+
 # screenshots
 bindsym $mod+p exec --no-startup-id maim --select "$HOME/Pictures/$(date +%H-%M-%S).jpg"
 bindsym $mod+Shift+p exec --no-startup-id maim -s --format png /dev/stdout | xclip -selection clipboard -t image/png -i
