--- a/config/sway/config
+++ b/config/sway/config
@@ -140,6 +140,10 @@ bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
+# brightness
+bindsym XF86MonBrightnessUp exec brightnessctl set +5%
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%- -n 1
+
 # screenshots
 bindsym $mod+p exec grimshot save area ~/Pictures/$(date +%H-%M-%S).png
 bindsym $mod+Shift+p exec grimshot copy area
