config:polybar: add upspeed to network module

--- a/config/polybar/mod/net.ini
+++ b/config/polybar/mod/net.ini
@@ -22,5 +22,5 @@ format-disconnected-prefix-foreground = ${color.red}
 format-disconnected-background = ${color.background}
 format-disconnected-padding = 0
 
-label-connected = "%{A1:nm-connection-editor &:} %ifname%  %{T4}%{F#eba0ac} %{F-}%{T-} %downspeed%%{A}"
+label-connected = "%{A1:nm-connection-editor &:} %ifname%  %{T4}%{F#8aadf4} %{F-}%{T-} %upspeed% %{T4}%{F#eba0ac} %{F-}%{T-} %downspeed%%{A}"
 label-disconnected = "%{A1:nm-connection-editor &:} Down%{A}"
