pkg:mise: add claude code CLI

--- a/pkg/mise/config.toml
+++ b/pkg/mise/config.toml
@@ -48,3 +48,4 @@ usage = "latest"
 "aqua:helmfile/helmfile" = "latest"
 "aqua:datreeio/datree" = "latest"
 "npm:@google/gemini-cli" = "latest"
+"npm:@anthropic-ai/claude-code" = "latest"
