pkg - config: move mise and yazi to standard $XDG_CONFIG_HOME

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ config/albert/*
 config/asciinema/install-id
 config/tmux/plugins
 config/i3/i3-bar
-pkg/yazi/plugins
-pkg/yazi/bookmarks
+config/yazi/plugins
+config/yazi/bookmarks
