config:tmux: custom modules: add -o to make them configurable

--- a/config/tmux/catppuccin_modules/window_name.conf
+++ b/config/tmux/catppuccin_modules/window_name.conf
@@ -3,6 +3,6 @@
 
 set -g "@catppuccin_${MODULE_NAME}_text" " #{b:pane_current_command}"
 set -g "@catppuccin_${MODULE_NAME}_icon" "#(#{TMUX_CONFIG_DIR}/plugins/tmux-nerd-font-window-name/bin/tmux-nerd-font-window-name #{pane_current_command} #{window_panes}) "
-set -g "@catppuccin_${MODULE_NAME}_color" "#{E:@thm_bg}"
+set -og "@catppuccin_${MODULE_NAME}_color" "#{E:@thm_bg}"
 
 source -F "#{TMUX_CONFIG_DIR}/plugins/tmux/utils/status_module.conf"
