--- a/config/tmux/catppuccin_modules/session_prefix.conf
+++ b/config/tmux/catppuccin_modules/session_prefix.conf
@@ -2,7 +2,7 @@
 %hidden MODULE_NAME="session_prefix"
 
 set -g "@catppuccin_${MODULE_NAME}_icon" "#{?client_prefix,#{#[fg=#{@thm_green},bold] 󰯄 },#{#[fg=#{@thm_peach},bold]  }}"
-set -g "@catppuccin_${MODULE_NAME}_text" " #S"
-set -g "@catppuccin_${MODULE_NAME}_color" "#{E:@thm_bg}"
+set -og "@catppuccin_${MODULE_NAME}_text" " #S"
+set -og "@catppuccin_${MODULE_NAME}_color" "#{E:@thm_bg}"
 
 source -F "#{TMUX_CONFIG_DIR}/plugins/tmux/utils/status_module.conf"
