--- a/config/tmux/catppuccin_modules/zoom.conf
+++ b/config/tmux/catppuccin_modules/zoom.conf
@@ -1,8 +1,8 @@
 # vim:set ft=tmux:
 %hidden MODULE_NAME="zoom"
 
-set -g "@catppuccin_${MODULE_NAME}_icon"  " "
-set -g "@catppuccin_${MODULE_NAME}_text"  " Zoom"
-set -g "@catppuccin_${MODULE_NAME}_color" "#{E:@thm_bg}"
+set -og "@catppuccin_${MODULE_NAME}_icon"  " "
+set -og "@catppuccin_${MODULE_NAME}_text"  " Zoom"
+set -og "@catppuccin_${MODULE_NAME}_color" "#{E:@thm_bg}"
 
 source -F "#{TMUX_CONFIG_DIR}/plugins/tmux/utils/status_module.conf"
