config:tmux: refactor catppuccin custom modules

--- a/config/tmux/catppuccin_modules/separator.conf
+++ b/config/tmux/catppuccin_modules/separator.conf
@@ -2,8 +2,8 @@
 
 %hidden MODULE_NAME="separator"
 
-set -og "@catppuccin_${MODULE_NAME}_icon" " │ "
-set -og "@catppuccin_${MODULE_NAME}_color" "#{@thm_bg}"
-set -og "@catppuccin_${MODULE_NAME}_text" ""
+set -ogq "@catppuccin_${MODULE_NAME}_icon" " │ "
+set -ogq "@catppuccin_${MODULE_NAME}_text" ""
+set -ogq "@catppuccin_${MODULE_NAME}_color" "#{@thm_bg}"
 
 source -F "#{TMUX_CONFIG_DIR}/plugins/tmux/utils/status_module.conf"
