config:tmux: refactor catppuccin border status

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -3,9 +3,12 @@
 
 #: VARS/ENV {{{
 
+set-environment -g KUBE_TMUX_SYMBOL_ENABLE false
 set-environment -gF TMUX_CONFIG_DIR "#{XDG_CONFIG_HOME}/tmux"
 set-environment -gF TMUX_RESURRECT_DIR "#{XDG_DATA_HOME}/tmux/resurrect"
-set-environment -g KUBE_TMUX_SYMBOL_ENABLE false
+
+set -g @thm_transparent "default"
+set -gF @TMUX_KUBE_PLUGIN_PATH "#{TMUX_CONFIG_DIR}/plugins/kube-tmux/kube.tmux"
 
 #: }}}
 
@@ -138,70 +141,76 @@ set -g @catppuccin_status_middle_separator ""
 
 #: SEPARATOR
 set -g @catppuccin_status_separator_icon_fg "#{@thm_surface_2}"
+set -g @catppuccin_status_separator_icon_bg "#{@thm_transparent}"
 
 #: LEFT
-set -g @catppuccin_status_session_prefix_color "#{@thm_bg}"
-set -g @catppuccin_status_session_prefix_text_bg "#{@thm_bg}"
 set -g @catppuccin_status_session_prefix_text_fg "#{@thm_peach}"
+set -g @catppuccin_status_session_prefix_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_session_prefix_text_bg "#{@thm_transparent}"
 
-set -g @catppuccin_status_window_name_text_bg "#{@thm_bg}"
 set -g @catppuccin_status_window_name_icon_fg "#{@thm_green}"
 set -g @catppuccin_status_window_name_text_fg "#{@thm_green}"
+set -g @catppuccin_status_window_name_text_bg "#{@thm_transparent}"
+set -g @catppuccin_status_window_name_icon_bg "#{@thm_transparent}"
+
+set -gF @catppuccin_status_kube_icon "#[fg=#89b4fa,bg=#{E:@thm_transparent}]󱃾  "
 
 set -g @catppuccin_directory_icon " "
-set -g @catppuccin_directory_color "#{@thm_bg}"
-set -g @catppuccin_status_directory_text_bg "#{@thm_bg}"
 set -g @catppuccin_status_directory_icon_fg "#{@thm_blue}"
 set -g @catppuccin_status_directory_text_fg "#{@thm_blue}"
+set -g @catppuccin_status_directory_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_directory_text_bg "#{@thm_transparent}"
 
-set -g @catppuccin_kube_context_color "#{@thm_red}"
-set -g @catppuccin_kube_namespace_color "#{@thm_peach}"
-set -g @catppuccin_kube_color "#{@thm_bg}"
-set -g @catppuccin_status_kube_icon_fg "#{@thm_blue}"
-set -g @catppuccin_status_kube_text_bg "#{@thm_bg}"
-
-set -g @catppuccin_status_zoom_icon_bg "#{@thm_bg}"
-set -g @catppuccin_status_zoom_text_bg "#{@thm_bg}"
+set -g @catppuccin_zoom_text ""
 set -g @catppuccin_status_zoom_icon_fg "#{@thm_yellow}"
 set -g @catppuccin_status_zoom_text_fg "#{@thm_yellow}"
+set -g @catppuccin_status_zoom_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_zoom_text_bg "#{@thm_transparent}"
 
 #: RIGHT
-set -g @catppuccin_status_user_and_host_icon_bg "#{@thm_bg}"
-set -g @catppuccin_status_user_and_host_text_bg "#{@thm_bg}"
-set -g @catppuccin_status_user_and_host_icon_fg "#{@thm_peach}"
-set -g @catppuccin_status_user_and_host_text_fg "#{@thm_peach}"
+
+set -g @catppuccin_gitmuxx_icon " "
+set -g @catppuccin_status_gitmuxx_icon_fg "#{@thm_yellow}"
+set -g @catppuccin_status_gitmuxx_text_fg "#{@thm_teal}"
+set -g @catppuccin_status_gitmuxx_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_gitmuxx_text_bg "#{@thm_transparent}"
+
+set -g @catppuccin_status_user_icon_fg "#{@thm_peach}"
+set -g @catppuccin_status_user_text_fg "#{@thm_peach}"
+set -g @catppuccin_status_user_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_user_text_bg "#{@thm_transparent}"
+
+set -g @catppuccin_host_icon " "
+set -g @catppuccin_status_host_icon_fg "#{@thm_blue}"
+set -g @catppuccin_status_host_text_fg "#{@thm_blue}"
+set -g @catppuccin_status_host_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_host_text_bg "#{@thm_transparent}"
 
 set -g @catppuccin_battery_icon "󱐋"
-set -g @catppuccin_status_battery_icon_bg "#{@thm_bg}"
-set -g @catppuccin_status_battery_text_bg "#{@thm_bg}"
 set -g @catppuccin_status_battery_icon_fg "#{@thm_blue}"
 set -g @catppuccin_status_battery_text_fg "#{@thm_blue}"
+set -g @catppuccin_status_battery_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_battery_text_bg "#{@thm_transparent}"
 
-set -g @catppuccin_status_uptime_icon_bg "#{@thm_bg}"
-set -g @catppuccin_status_uptime_text_bg "#{@thm_bg}"
+set -g @catppuccin_uptime_icon " "
 set -g @catppuccin_status_uptime_icon_fg "#{@thm_red}"
 set -g @catppuccin_status_uptime_text_fg "#{@thm_red}"
+set -g @catppuccin_status_uptime_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_uptime_text_bg "#{@thm_transparent}"
 
 set -g @catppuccin_date_time_text " %Y-%m-%d 󰅐 %H:%M "
 set -g @catppuccin_date_time_icon "󰃭"
-set -g @catppuccin_date_time_color "#{@thm_bg}"
 set -g @catppuccin_status_date_time_icon_fg "#{@thm_flamingo}"
 set -g @catppuccin_status_date_time_text_fg "#{@thm_flamingo}"
-set -g @catppuccin_status_date_time_text_bg "#{@thm_bg}"
-
-run '#{TMUX_CONFIG_DIR}/plugins/tmux/catppuccin.tmux'
+set -g @catppuccin_status_date_time_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_date_time_text_bg "#{@thm_transparent}"
 
 #: CUSTOM MODULES
-source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/user_and_host.conf'
+source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/gitmux.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/session_prefix.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/window_name.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/separator.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/zoom.conf'
-
-# set -ga status-right "#{E:@catppuccin_status_separator}"
-# set -gaF status-right "#{E:@catppuccin_status_battery}"
-# set -ga status-right "#{E:@catppuccin_status_separator}"
-# set -ga status-right "#{E:@catppuccin_status_date_time}"
 
 run '#{TMUX_CONFIG_DIR}/plugins/tmux/catppuccin.tmux'
 
@@ -268,10 +277,14 @@ set-hook -g window-renamed \
         set -ga status-left "#{E:@catppuccin_status_separator}"
         set -ga status-left "#{E:@catppuccin_status_window_name}"
         set -ga status-left "#{E:@catppuccin_status_separator}"
-        set -ga status-left "#{E:@catppuccin_status_kube}"
+        set -ga status-left "#{E:@catppuccin_status_kube_icon}#(bash #{E:@TMUX_KUBE_PLUGIN_PATH} 250 #{q:@thm_peach} #{q:@thm_blue})"
         set -ga status-left "#{?window_zoomed_flag,#{E:@catppuccin_status_separator}#{E:@catppuccin_status_zoom},}"
 
-        set -g status-right "#{E:@catppuccin_status_user_and_host}"
+        set -g status-right "#{E:@catppuccin_status_gitmuxx}"
+        set -ga status-right "#{E:@catppuccin_status_separator}"
+        set -ga status-right "#{E:@catppuccin_status_user}"
+        set -ga status-right "#{E:@catppuccin_status_separator}"
+        set -ga status-right "#{E:@catppuccin_status_host}"
         set -ga status-right "#{E:@catppuccin_status_separator}"
         set -ga status-right "#{E:@catppuccin_status_uptime}"
 }'
