config:tmux: standardize gitmux config path and use XDG_CONFIG_HOME

--- a/config/tmux/catppuccin_modules/gitmux.conf
+++ b/config/tmux/catppuccin_modules/gitmux.conf
@@ -2,7 +2,7 @@
 %hidden MODULE_NAME="gitmuxx"
 
 set -ogq "@catppuccin_${MODULE_NAME}_icon" " "
-set -gq "@catppuccin_${MODULE_NAME}_text" ' #(gitmux -cfg $HOME/.gitmux.yaml "#{pane_current_path}")'
+set -gq "@catppuccin_${MODULE_NAME}_text" ' #(gitmux -cfg $XDG_CONFIG_HOME/gitmux/config.yaml "#{pane_current_path}")'
 set -ogqF "@catppuccin_${MODULE_NAME}_color" "#{E:@thm_teal}"
 
 source -F "#{TMUX_CONFIG_DIR}/plugins/tmux/utils/status_module.conf"
