config:tmux: add pane synchronized catppuccin module

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -7,8 +7,8 @@ set-environment -g KUBE_TMUX_SYMBOL_ENABLE false
 set-environment -gF TMUX_CONFIG_DIR "#{XDG_CONFIG_HOME}/tmux"
 set-environment -gF TMUX_RESURRECT_DIR "#{XDG_DATA_HOME}/tmux/resurrect"
 
-set -g @thm_transparent "default"
 set -gF @TMUX_KUBE_PLUGIN_PATH "#{TMUX_CONFIG_DIR}/plugins/kube-tmux/kube.tmux"
+set -g @thm_transparent "default"
 
 #: }}}
 
@@ -23,6 +23,8 @@ bind C-a send-prefix
 
 #: GLOBAL SETTINGS {{{
 
+set -s escape-time 25
+set -g mouse on
 set -g base-index 1
 set -g pane-base-index 1
 set -g set-clipboard on
@@ -50,20 +52,21 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 
 #: }}}
 
-#: USER DEFINED COMMANDS {{{
+#: COMMANDS {{{
 
 set -s command-alias[10] repane='select-pane -T'
 set -s command-alias[11] rewindow='rename-window'
 
 #: }}}
 
-#: MISC KEYBINDINGS {{{
+#: MODES KEYBINDINGS {{{
 
-bind h set -g mouse on \; run-shell "notify-send -i input-mouse -u low -t 1000 'Mouse mode on'"
-bind H set -g mouse off \; run-shell "notify-send -i changes-prevent -u low -t 1000 'Mouse mode off'"
+bind h set -g mouse on \; run "notify-send -i input-mouse -u low -t 1000 'Mouse mode on'"
+bind H set -g mouse off \; run "notify-send -i changes-prevent -u low -t 1000 'Mouse mode off'"
 
-bind e set -w synchronize-panes on \; run-shell "notify-send -i state_running -u low -t 1000 'Panes synchronization on'"
-bind E set -w synchronize-panes off \; run-shell "notify-send -i state_paused  -u low -t 1000 'Panes synchronization off'"
+bind e set -w synchronize-panes on \; run "notify-send -i state_running -u low -t 1000 'Pane synchronization on'"
+bind E set -w synchronize-panes off \; run "notify-send -i state_paused  -u low -t 1000 'Pane synchronization off'"
+
 
 #: }}}
 
@@ -71,6 +74,9 @@ bind E set -w synchronize-panes off \; run-shell "notify-send -i state_paused  -
 
 bind -n C-Left previous-window
 bind -n C-Right next-window
+
+bind j run 'tmux swap-window -d -t #{e|-|:#I,1}'
+bind k run 'tmux swap-window -d -t #{e|+|:#I,1}'
 
 bind C-w command-prompt -p "Window name:" "new-window -n '%%'"
 bind C-, command-prompt -I "#W" "rename-window '%%'"
@@ -91,6 +97,7 @@ bind -r Up resize-pane -U 5
 bind -r Down resize-pane -D 5
 bind -r Left resize-pane -L 5
 bind -r Right resize-pane -R 5
+bind -r z resize-pane -Z
 
 #: }}}
 
@@ -161,6 +168,13 @@ set -g @catppuccin_status_directory_text_fg "#{@thm_blue}"
 set -g @catppuccin_status_directory_icon_bg "#{@thm_transparent}"
 set -g @catppuccin_status_directory_text_bg "#{@thm_transparent}"
 
+
+set -g @catppuccin_sync_text ""
+set -g @catppuccin_status_sync_icon_fg "#{@thm_red}"
+set -g @catppuccin_status_sync_text_fg "#{@thm_red}"
+set -g @catppuccin_status_sync_icon_bg "#{@thm_transparent}"
+set -g @catppuccin_status_sync_text_bg "#{@thm_transparent}"
+
 set -g @catppuccin_zoom_text ""
 set -g @catppuccin_status_zoom_icon_fg "#{@thm_yellow}"
 set -g @catppuccin_status_zoom_text_fg "#{@thm_yellow}"
@@ -211,6 +225,7 @@ source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/session_prefix.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/window_name.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/separator.conf'
 source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/zoom.conf'
+source -F '#{TMUX_CONFIG_DIR}/catppuccin_modules/sync.conf'
 
 run '#{TMUX_CONFIG_DIR}/plugins/tmux/catppuccin.tmux'
 
@@ -279,6 +294,7 @@ set-hook -g window-renamed \
         set -ga status-left "#{E:@catppuccin_status_separator}"
         set -ga status-left "#{E:@catppuccin_status_kube_icon}#(bash #{E:@TMUX_KUBE_PLUGIN_PATH} 250 #{q:@thm_peach} #{q:@thm_blue})"
         set -ga status-left "#{?window_zoomed_flag,#{E:@catppuccin_status_separator}#{E:@catppuccin_status_zoom},}"
+        set -ga status-left "#{?pane_synchronized,#{E:@catppuccin_status_separator}#{E:@catppuccin_status_sync},}"
 
         set -g status-right "#{E:@catppuccin_status_gitmuxx}"
         set -ga status-right "#{E:@catppuccin_status_separator}"
