--- a/home/.gitconfig.dist
+++ b/home/.gitconfig.dist
@@ -22,230 +22,44 @@
     autocrlf = input
     trustctime = false
     precomposeunicode = false
-    pager = delta --dark
+    pager = delta
     ignorecase = false
+
+[grep]
+    lineNumber = true
+
+[interactive]
+    diffFilter = delta --color-only
 
 [delta]
     features = line-numbers decorations
     whitespace-error-style = 22 reverse
+    blame-format = "{author:<12.12} {timestamp:<12} {commit:<7} "
+    blame-palette = "#1e1e2e #181825 #11111b"
+    blame-code-style = syntax
+    hyperlinks = true
+    navigate = true
+    dark = true
+    syntax-theme = Catppuccin Mocha
 
 [delta "decorations"]
     commit-decoration-style = bold yellow box ul
     file-style = bold yellow ul
     file-decoration-style = none
 
-[help]
-    autocorrect = 1
-
-[alias]
-    a = add --all
-    ai = add -i
-    #############
-    ap = apply
-    as = apply --stat
-    ac = apply --check
-    #############
-    ama = am --abort
-    amr = am --resolved
-    ams = am --skip
-    #############
-    b = branch
-    ba = branch -a
-    bd = branch -d
-    bdd = branch -D
-    br = branch -r
-    bc = rev-parse --abbrev-ref HEAD
-    bu = !git rev-parse --abbrev-ref --symbolic-full-name "@{u}"
-    bs = !git-branch-status
-    #############
-    c = commit
-    ca = commit -a
-    cm = commit -m
-    cam = commit -am
-    cem = commit --allow-empty -m
-    cd = commit --amend
-    cad = commit -a --amend
-    ced = commit --allow-empty --amend
-    #############
-    cl = clone
-    cld = clone --depth 1
-    clg = !sh -c 'git clone git://github.com/$1 $(basename $1)' -
-    clgp = !sh -c 'git clone git@github.com:$1 $(basename $1)' -
-    clgu = !sh -c 'git clone git@github.com:$(git config --get user.username)/$1 $1' -
-    #############
-    cp = cherry-pick
-    cpa = cherry-pick --abort
-    cpc = cherry-pick --continue
-    #############
-    d = diff
-    dp = diff --patience
-    dc = diff --cached
-    dk = diff --check
-    dck = diff --cached --check
-    dt = difftool
-    dct = difftool --cached
-    #############
-    f = fetch
-    fo = fetch origin
-    fu = fetch upstream
-    #############
-    fp = format-patch
-    #############
-    fk = fsck
-    #############
-    g = grep -p
-    #############
-    l = log --oneline
-    lg = log --oneline --graph --decorate
-    #############
-    ls = ls-files
-    lsf = !git ls-files | grep -i
-    #############
-    m = merge
-    ma = merge --abort
-    mc = merge --continue
-    ms = merge --skip
-    #############
-    o = checkout
-    om = checkout master
-    ob = checkout -b
-    opr = !sh -c 'git fo pull/$1/head:pr-$1 && git o pr-$1'
-    #############
-    pr = prune -v
-    #############
-    ps = push
-    psf = push -f
-    psu = push -u
-    pst = push --tags
-    #############
-    pso = push origin
-    psao = push --all origin
-    psfo = push -f origin
-    psuo = push -u origin
-    #############
-    psom = push origin master
-    psaom = push --all origin master
-    psfom = push -f origin master
-    psuom = push -u origin master
-    psoc = !git push origin $(git bc)
-    psaoc = !git push --all origin $(git bc)
-    psfoc = !git push -f origin $(git bc)
-    psuoc = !git push -u origin $(git bc)
-    psdc = !git push origin :$(git bc)
-    #############
-    pl = pull
-    pb = pull --rebase
-    #############
-    plo = pull origin
-    pbo = pull --rebase origin
-    plom = pull origin master
-    ploc = !git pull origin $(git bc)
-    pbom = pull --rebase origin master
-    pboc = !git pull --rebase origin $(git bc)
-    #############
-    plu = pull upstream
-    plum = pull upstream master
-    pluc = !git pull upstream $(git bc)
-    pbum = pull --rebase upstream master
-    pbuc = !git pull --rebase upstream $(git bc)
-    #############
-    rb = rebase
-    rba = rebase --abort
-    rbc = rebase --continue
-    rbi = rebase --interactive
-    rbs = rebase --skip
-    #############
-    re = reset
-    rh = reset HEAD
-    reh = reset --hard
-    rem = reset --mixed
-    res = reset --soft
-    rehh = reset --hard HEAD
-    remh = reset --mixed HEAD
-    resh = reset --soft HEAD
-    rehom = reset --hard origin/master
-    #############
-    r = remote
-    ra = remote add
-    rr = remote rm
-    rv = remote -v
-    rn = remote rename
-    rp = remote prune
-    rs = remote show
-    rao = remote add origin
-    rau = remote add upstream
-    rro = remote remove origin
-    rru = remote remove upstream
-    rso = remote show origin
-    rsu = remote show upstream
-    rpo = remote prune origin
-    rpu = remote prune upstream
-    #############
-    rmf = rm -f
-    rmrf = rm -r -f
-    #############
-    s = status
-    sb = status -s -b
-    #############
-    sa = stash apply
-    sc = stash clear
-    sd = stash drop
-    sl = stash list
-    sp = stash pop
-    ss = stash save
-    ssk = stash save -k
-    sw = stash show
-    st = !git stash list | wc -l 2>/dev/null | grep -oEi '[0-9][0-9]*'
-    #############
-    t = tag
-    td = tag -d
-    #############
-    w = show
-    wp = show -p
-    wr = show -p --no-color
-    #############
-    subadd = !sh -c 'git submodule add git://github.com/$1 $2/$(basename $1)' -
-    subrm = !sh -c 'git submodule deinit -f -- $1 && rm -rf .git/modules/$1 && git rm -f $1' -
-    subup = submodule update --init --recursive
-    subpull = !git submodule foreach git pull --tags -f origin master
-    #############
-    assume = update-index --assume-unchanged
-    unassume = update-index --no-assume-unchanged
-    assumed = !git ls -v | grep ^h | cut -c 3-
-    unassumeall = !git assumed | xargs git unassume
-    assumeall = !git status -s | awk {'print $2'} | xargs git assume
-    #############
-    bump = !sh -c 'git commit -am \"Version bump v$1\" && git psuoc && git release $1' -
-    release = !sh -c 'git tag v$1 && git pst' -
-    unrelease = !sh -c 'git tag -d v$1 && git pso :v$1' -
-    merged = !sh -c 'git o master && git plom && git bd $1 && git rpo' -
-    aliases = !git config -l | grep alias | cut -c 7-
-    snap = !git stash save 'snapshot: $(date)' && git stash apply 'stash@{0}'
-    bare = !sh -c 'git symbolic-ref HEAD refs/heads/$1 && git rm --cached -r . && git clean -xfd' -
-    whois = !sh -c 'git log -i -1 --author=\"$1\" --pretty=\"format:%an <%ae>\"' -
-    serve = daemon --reuseaddr --verbose --base-path=. --export-all ./.git
-    #############
-    behind = !git rev-list --left-only --count $(git bu)...HEAD
-    ahead = !git rev-list --right-only --count $(git bu)...HEAD
-    #############
-    ours = "!f() { git checkout --ours $@ && git add $@; }; f"
-    theirs = "!f() { git checkout --theirs $@ && git add $@; }; f"
-    subrepo = !sh -c 'git filter-branch --prune-empty --subdirectory-filter $1 master' -
-    human = name-rev --name-only --refs=refs/heads/*
-
 [diff]
-    tool = vimdiff
+    tool = nvimdiff
     compactionHeuristic = true
     indentHeuristic = true
+
+[difftool "nvimdiff"]
+    cmd = nvim -d "$LOCAL" "$REMOTE"
 
 [difftool]
     prompt = false
 
-[diff "json"]
-    textconv = python -m json.tool
-
-[diff "word"]
-    textconv = docx2txt
+[merge]
+    conflictStyle = zdiff3
 
 [credential]
     helper = cache
@@ -297,3 +111,205 @@
     smudge = git-lfs smudge -- %f
     process = git-lfs filter-process
     required = true
+
+[url "git@github.com:"]
+    insteadOf = gh:
+    insteadOf = https://github.com/
+    pushInsteadOf = gh:
+
+[url "git@gist.github.com:"]
+    insteadOf = gist:
+    insteadOf = https://gist.github.com/
+    pushInsteadOf = gist:
+
+[help]
+    autocorrect = 1
+
+[alias]
+    a = add -A
+    ai = add -i
+    au = add -u
+    #############
+    ap = apply
+    as = apply --stat
+    ac = apply --check
+    #############
+    ama = am --abort
+    amr = am --resolved
+    ams = am --skip
+    #############
+    b = branch
+    ba = branch -a
+    bd = branch -d
+    bdf = branch -D
+    br = branch -r
+    bc = rev-parse --abbrev-ref HEAD
+    bu = !git rev-parse --abbrev-ref --symbolic-full-name "@{u}"
+    bs = !git-branch-status
+    #############
+    c = commit
+    ca = commit -a
+    cm = commit -m
+    cam = commit -am
+    cem = commit --allow-empty -m
+    cd = commit --amend
+    cdne = commit --amend --no-edit
+    cad = commit -a --amend
+    ced = commit --allow-empty --amend
+    #############
+    cl = clone
+    cld = clone --depth 1
+    clg = !sh -c 'git clone git://github.com/$1 $(basename $1)' -
+    clgp = !sh -c 'git clone git@github.com:$1 $(basename $1)' -
+    clgu = !sh -c 'git clone git@github.com:$(git config --get user.username)/$1 $1' -
+    #############
+    cp = cherry-pick
+    cpa = cherry-pick --abort
+    cpc = cherry-pick --continue
+    #############
+    d = diff
+    dp = diff --patience
+    dc = diff --cached
+    dk = diff --check
+    dck = diff --cached --check
+    dt = difftool
+    dct = difftool --cached
+    #############
+    f = fetch
+    fo = fetch origin
+    fu = fetch upstream
+    #############
+    fp = format-patch
+    #############
+    fk = fsck
+    #############
+    l = log --oneline
+    lg = log --oneline --graph --decorate
+    top = shortlog -sen
+    #############
+    ls = ls-files
+    lsf = !git ls-files | rg -i
+    #############
+    m = merge
+    ma = merge --abort
+    mc = merge --continue
+    ms = merge --skip
+    #############
+    o = checkout
+    om = checkout main
+    ob = checkout -b
+    opr = !sh -c 'git fo pull/$1/head:pr-$1 && git o pr-$1'
+    #############
+    pr = prune -v
+    #############
+    ps = push
+    psf = push -f
+    psu = push -u
+    pst = push --tags
+    #############
+    pso = push origin
+    psao = push --all origin
+    psfo = push -f origin
+    psuo = push -u origin
+    #############
+    psom = push origin main
+    psaom = push --all origin main
+    psfom = push -f origin main
+    psuom = push -u origin main
+    psoc = !git push origin $(git bc)
+    psaoc = !git push --all origin $(git bc)
+    psfoc = !git push -f origin $(git bc)
+    psuoc = !git push -u origin $(git bc)
+    psdc = !git push origin :$(git bc)
+    #############
+    plo = pull origin
+    pbo = pull --rebase origin
+    plom = pull origin main
+    ploc = !git pull origin $(git bc)
+    pbom = pull --rebase origin main
+    pboc = !git pull --rebase origin $(git bc)
+    #############
+    plu = pull upstream
+    plum = pull upstream main
+    pluc = !git pull upstream $(git bc)
+    pbum = pull --rebase upstream main
+    pbuc = !git pull --rebase upstream $(git bc)
+    #############
+    rb = rebase
+    rba = rebase --abort
+    rbc = rebase --continue
+    rbi = rebase --interactive
+    rbs = rebase --skip
+    #############
+    re = restore
+    res = restore --staged
+    rh = reset HEAD
+    reh = reset --hard
+    rem = reset --mixed
+    res = reset --soft
+    rehh = reset --hard HEAD
+    remh = reset --mixed HEAD
+    resh = reset --soft HEAD
+    rehom = reset --hard origin/main
+    #############
+    r = remote
+    ra = remote add
+    rr = remote rm
+    rv = remote -v
+    rn = remote rename
+    rp = remote prune
+    rs = remote show
+    rao = remote add origin
+    rau = remote add upstream
+    rro = remote remove origin
+    rru = remote remove upstream
+    rso = remote show origin
+    rsu = remote show upstream
+    rpo = remote prune origin
+    rpu = remote prune upstream
+    #############
+    s = status
+    sb = status -s -b
+    #############
+    sa = stash apply
+    sc = stash clear
+    sd = stash drop
+    sl = stash list
+    sp = stash pop
+    ss = stash save
+    ssk = stash save -k
+    sw = stash show
+    st = !git stash list | wc -l
+    #############
+    t = tag
+    td = tag -d
+    #############
+    w = show
+    wp = show -p
+    wr = show -p --no-color
+    #############
+    subadd = !sh -c 'git submodule add git@github.com:$1 $2/$(basename $1)' -
+    subrm = !sh -c 'git submodule deinit -f -- $1 && rm -rf .git/modules/$1 && git rm -f $1' -
+    subup = submodule update --init --recursive
+    subpull = !git submodule foreach git pull --tags -f origin main
+    #############
+    assume = update-index --assume-unchanged
+    unassume = update-index --no-assume-unchanged
+    assumed = !git ls -v | rg ^h | cut -c 3-
+    #############
+    bump = "!f() { git cam \"Bump version: v$1\"; }; f"
+    release = "!f() { git t v$1 && git pst; }; f"
+    unrelease = "!f() { git td v$1 && git pso -d $1; }; f"
+    snap = "!f() { git stash save -u \"snapshot: $(date +'%Y-%m-%d %H:%M')\" && git stash apply stash@{0}; }; f"
+    merged = !sh -c 'git om && git plom && git bd $1 && git rpo' -
+    aliases = !git config -l | rg alias | cut -c 7-
+    whois = !git log -i -1 --pretty='format:%an <%ae>' --author
+    serve = daemon --reuseaddr --verbose --base-path=. --export-all ./.git
+    #############
+    behind = !git rev-list --left-only --count $(git bu)...HEAD
+    ahead = !git rev-list --right-only --count $(git bu)...HEAD
+    #############
+    ours = "!f() { git checkout --ours $@ && git add $@; }; f"
+    theirs = "!f() { git checkout --theirs $@ && git add $@; }; f"
+    subrepo = !sh -c 'git filter-branch --prune-empty --subdirectory-filter $1 main' -
+    human = name-rev --name-only --refs=refs/heads/*
