--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -9,6 +9,7 @@ set-environment -gF TMUX_RESURRECT_DIR "#{XDG_DATA_HOME}/tmux/resurrect"
 
 set -gF @TMUX_KUBE_PLUGIN_PATH "#{TMUX_CONFIG_DIR}/plugins/kube-tmux/kube.tmux"
 set -g @thm_transparent "default"
+set -g @thm_dim "#1d1d2d"
 
 #: }}}
 
@@ -277,6 +278,18 @@ set -g @tnotify-verbose-msg 'Session: #S - Window: #I - Pane: #P'
 
 #: INIT TMUX PACKAGE MANAGER AND SOURCE PLUGINS
 run '#{TMUX_CONFIG_DIR}/plugins/tpm/tpm'
+
+#: }}}
+
+#: STYLES {{{
+
+set -g mode-style "fg=#{@thm_flamingo},bg=#{@thm_transparent},italics,dim"
+set -g pane-border-style "fg=#{@thm_lavender},bg=#{@thm_transparent}"
+set -g pane-active-border-style "fg=#{@thm_lavender},bg=#{@thm_transparent}"
+set -g message-command-style "fg=#{@thm_rosewater},bg=#{@thm_transparent},dim"
+set -g message-style "fg=#{@thm_rosewater},bg=#{@thm_transparent},bold"
+set -g window-style "bg=#{@thm_transparent}"
+set -g window-active-style "bg=#{@thm_dim}"
 
 #: }}}
 
