config:tmux: remap resize-pane and unbind default keybindings

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -93,10 +93,10 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
-bind -r Up resize-pane -U 5
-bind -r Down resize-pane -D 5
-bind -r Left resize-pane -L 5
-bind -r Right resize-pane -R 5
+bind -r S-Up resize-pane -U 5
+bind -r S-Down resize-pane -D 5
+bind -r S-Left resize-pane -L 5
+bind -r S-Right resize-pane -R 5
 bind -r z resize-pane -Z
 
 #: }}}
@@ -108,6 +108,12 @@ unbind %
 
 unbind C-Up
 unbind C-Down
+unbind C-Left
+unbind C-Right
+unbind M-Up
+unbind M-Down
+unbind M-Left
+unbind M-Right
 unbind p
 unbind n
 
