config:tmux: update extrakto settings

--- a/config/tmux/tmux.conf
+++ b/config/tmux/tmux.conf
@@ -109,7 +109,7 @@ unbind %
 unbind C-Up
 unbind C-Down
 unbind C-Left
-unbind C-Right
+unbind C-Left
 unbind M-Up
 unbind M-Down
 unbind M-Left
@@ -273,7 +273,9 @@ set -g @open-S 'https://www.google.com/search?q='
 
 set -g @plugin 'kristopolous/tmux-gentrify'
 set -g @plugin 'laktak/extrakto'
-set -g @extrakto_popup_size 50%
+set -g @extrakto_fzf_layout reverse
+set -g @extrakto_popup_size "40%,30%"
+set -g @extrakto_fzf_unset_default_opts false
 
 set -g @plugin 'rickstaa/tmux-notify'
 set -g @tnotify-verbose 'on'
