config:mise: add treesitter CLI

--- a/config/mise/mise.toml
+++ b/config/mise/mise.toml
@@ -48,5 +48,6 @@ usage = "latest"
 "aqua:helm/helm" = "latest"
 "aqua:helmfile/helmfile" = "latest"
 "aqua:datreeio/datree" = "latest"
+"aqua:tree-sitter/tree-sitter" = "latest"
 "npm:@google/gemini-cli" = "latest"
 "npm:@anthropic-ai/claude-code" = "latest"
