config:starship: prompt changes

--- a/config/starship/starship.toml
+++ b/config/starship/starship.toml
@@ -1,16 +1,16 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 format = """
-[░▒▓](sec1_bg)\
+[░▒▓](section1_bg)\
 $os\
-[](fg:sec1_bg bg:sec2_bg)\
+[](fg:section1_bg bg:section2_bg)\
 $directory\
-[](fg:sec2_bg bg:sec3_bg)\
+[](fg:section2_bg bg:section3_bg)\
 $git_branch\
 $git_status\
 $git_commit\
 $git_state\
-[](fg:sec3_bg bg:sec4_bg)\
+[](fg:section3_bg bg:section4_bg)\
 $c\
 $rust\
 $golang\
@@ -18,42 +18,34 @@ $nodejs\
 $php\
 $java\
 $kotlin\
-$haskell\
 $python\
 $lua\
 $ruby\
 $terraform\
 $helm\
-[](fg:sec4_bg bg:sec5_bg)\
+[](fg:section4_bg bg:section5_bg)\
 $time\
-$direnv\
-[ ](fg:sec5_bg)\
+[ ](fg:section5_bg)\
 $cmd_duration\
 $line_break\
 $character"""
 
-palette = 'catppuccin'
+palette = 'custom'
 add_newline = false
 
 [os]
 disabled = false
-style = "fg:sec1_fg bg:sec1_bg"
+style = "fg:section1_fg bg:section1_bg"
 
 [os.symbols]
-Windows = "  "
 Ubuntu = " 󰕈 "
 SUSE = "  "
-Raspbian = " 󰐿 "
 Mint = " 󰣭 "
-Macos = " 󰀵 "
 Manjaro = "  "
 Linux = " 󰌽 "
 Gentoo = " 󰣨 "
 Fedora = " 󰣛 "
 Alpine = "  "
-Amazon = "  "
-Android = "  "
-AOSC = "  "
 Arch = " 󰣇 "
 Artix = " 󰣇 "
 CentOS = "  "
@@ -62,7 +54,7 @@ Redhat = " 󱄛 "
 RedHatEnterprise = " 󱄛 "
 
 [directory]
-style = "bold fg:sec2_fg bg:sec2_bg"
+style = "bold fg:section2_fg bg:section2_bg"
 format = "[ $path ]($style)"
 truncation_length = 3
 truncation_symbol = "…/"
@@ -75,98 +67,99 @@ truncation_symbol = "…/"
 
 [git_branch]
 symbol = ""
-style = "bg:sec3_bg"
-format = '[[ $symbol $branch ](bold fg:sec3_fg bg:sec3_bg)]($style)'
+style = "bold fg:section3_fg bg:section3_bg"
+format = '[ $symbol $branch ]($style)'
 
 [git_status]
-style = "bg:sec3_bg"
-format = '[[($all_status$ahead_behind )](bold fg:sec3_fg bg:sec3_bg)]($style)'
+style = "bold fg:section3_fg bg:section3_bg"
+format = '[($all_status$ahead_behind)]($style)'
 
 [git_commit]
-style = "bold bg:sec3_bg"
-format = '[[ $hash$tag ](bold fg:sec3_fg bg:sec3_bg)]($style)'
+style = "bold fg:section3_fg bg:section3_bg"
+format = '[ $hash$tag ]($style)'
 only_detached = true
 commit_hash_length = 5
 
 [c]
 symbol = " "
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [rust]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [golang]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [php]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [java]
 symbol = " "
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [kotlin]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [haskell]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [python]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version)(\(#$virtualenv\)) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [nodejs]
 symbol = "󰎙"
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [lua]
 symbol = "󰢱"
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [ruby]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [terraform]
 symbol = "󱁢"
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [helm]
 symbol = ""
-style = "bg:sec4_bg"
-format = '[[ $symbol( $version) ](bold fg:sec4_fg bg:sec4_bg)]($style)'
+style = "bold fg:section4_fg bg:section4_bg"
+format = '[ $symbol( $version) ]($style)'
 
 [time]
 disabled = true
 time_format = "%R"
-style = "bg:sec5_bg"
-format = '[[  $time ](fg:sec5_fg bg:sec5_bg)]($style)'
+style = "fg:section5_fg bg:section5_bg"
+format = '[  $time ]($style)'
 
 [direnv]
 symbol = " "
-disabled = false
+disabled = true
 allowed_msg = ""
 not_allowed_msg = ""
 loaded_msg = "󱞸"
 unloaded_msg = "󱞴"
-format = '[[ $symbol $loaded - $allowed ](fg:sec5_fg bg:sec5_bg)]($style)'
+style = "fg:section5_fg bg:section5_bg"
+format = '[ $symbol $loaded - $allowed ]($style)'
 
 [line_break]
 disabled = true
@@ -174,7 +167,6 @@ disabled = true
 [cmd_duration]
 show_milliseconds = false
 format = " in $duration "
-style = "bg:lavender"
 disabled = false
 show_notifications = false
 min_time = 30000
@@ -182,24 +174,24 @@ min_time_to_notify = 60000
 
 [character]
 disabled = false
-success_symbol = '[❯](bold fg:success)'
-error_symbol = '[✗](bold fg:error)'
+success_symbol = '[❯](bold fg:success_cmd)'
+error_symbol = '[✗](bold fg:error_cmd)'
 
-[palettes.catppuccin]
-sec1_bg = "#a3aed2"
-sec1_fg = "#090c0c"
+[palettes.custom]
+section1_bg = "#a3aed2"
+section1_fg = "#090c0c"
 
-sec2_bg = "#5c80c0"
-sec2_fg = "#e3e5e5"
+section2_bg = "#5c80c0"
+section2_fg = "#e3e5e5"
 
-sec3_bg = "#394260"
-sec3_fg = "#769ff0"
+section3_bg = "#394260"
+section3_fg = "#769ff0"
 
-sec4_bg = "#212736"
-sec4_fg = "#769ff0"
+section4_bg = "#212736"
+section4_fg = "#769ff0"
 
-sec5_bg = "#1d2230"
-sec5_fg = "#a0a9cb"
+section5_bg = "#1d2230"
+section5_fg = "#a0a9cb"
 
-success = "#a6e3a1"
-error = "#f38ba8"
+success_cmd = "#a6e3a1"
+error_cmd = "#f38ba8"
