config:picom: use case insensitive operators

--- a/config/picom/picom.conf
+++ b/config/picom/picom.conf
@@ -47,7 +47,7 @@ frame-opacity = 1;
 
 rules: (
     {
-        match = "class_g = 'Rofi'";
+        match = "class_g ?= 'Rofi'";
         animations = (
             {
                 triggers = [ "open", "show" ];
@@ -98,16 +98,16 @@ rules: (
         corner-radius = 0;
     },
     {
-        match = "class_g = 'i3bar'   || "
-                "class_g = 'albert'  || "
-                "class_g = 'Rofi'    || "
-                "class_g = 'Polybar' || "
-                "class_g = 'Dunst'";
+        match = "class_g ?= 'i3bar'   || "
+                "class_g ?= 'Albert'  || "
+                "class_g ?= 'Rofi'    || "
+                "class_g ?= 'Polybar' || "
+                "class_g ?= 'Dunst'";
         dim = 0;
     },
     {
-        match = "class_g = 'Alacritty' || "
-                "class_g = 'kitty'";
+        match = "class_g ?= 'Alacritty' || "
+                "class_g ?= 'kitty'";
         corner-radius = 0;
     },
 )
